# noir-playground

./: README.md  package.json
challenge-answers/: challenge-2-variables-functions.nr  challenge-3-merkle-proof.nr
client/: .env  README.md  package-lock.json  package.json
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/app/components/: CodeEditor.tsx  Instructions.tsx  ProverInput.tsx  Result.tsx  Verifier.tsx
server/: Cargo.toml  Dockerfile  README.md
server/src/: challenges.rs  main.rs
server/tmp/noir_projects/6502a549-6e7c-4a7e-8ee0-359ea9f565e7/project/: Nargo.toml
server/tmp/noir_projects/6502a549-6e7c-4a7e-8ee0-359ea9f565e7/project/src/: main.nr
